snapshots/syntax/library/functions/string/chrb_dollar/chrb_dollar_alphabet.snap
---
source: src/syntax/library/functions/string/chrb_dollar.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: FunctionStatement
      children:
        - kind: FunctionKeyword
          text: Function
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: GenerateAlphabet
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Whitespace
          text: " "
        - kind: AsKeyword
          text: As
        - kind: Whitespace
          text: " "
        - kind: StringKeyword
          text: String
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: Whitespace
              text: "    "
            - kind: DimStatement
              children:
                - kind: DimKeyword
                  text: Dim
                - kind: Whitespace
                  text: " "
                - kind: Identifier
                  text: i
                - kind: Whitespace
                  text: " "
                - kind: AsKeyword
                  text: As
                - kind: Whitespace
                  text: " "
                - kind: IntegerKeyword
                  text: Integer
                - kind: Newline
                  text: "\n"
            - kind: Whitespace
              text: "    "
            - kind: DimStatement
              children:
                - kind: DimKeyword
                  text: Dim
                - kind: Whitespace
                  text: " "
                - kind: Identifier
                  text: result
                - kind: Whitespace
                  text: " "
                - kind: AsKeyword
                  text: As
                - kind: Whitespace
                  text: " "
                - kind: StringKeyword
                  text: String
                - kind: Newline
                  text: "\n"
            - kind: ForStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: ForKeyword
                  text: For
                - kind: Whitespace
                  text: " "
                - kind: IdentifierExpression
                  children:
                    - kind: Identifier
                      text: i
                - kind: Whitespace
                  text: " "
                - kind: EqualityOperator
                  text: "="
                - kind: Whitespace
                  text: " "
                - kind: NumericLiteralExpression
                  children:
                    - kind: IntegerLiteral
                      text: "65"
                - kind: Whitespace
                  text: " "
                - kind: ToKeyword
                  text: To
                - kind: Whitespace
                  text: " "
                - kind: NumericLiteralExpression
                  children:
                    - kind: IntegerLiteral
                      text: "90"
                - kind: Newline
                  text: "\n"
                - kind: StatementList
                  children:
                    - kind: Whitespace
                      text: "        "
                    - kind: AssignmentStatement
                      children:
                        - kind: IdentifierExpression
                          children:
                            - kind: Identifier
                              text: result
                        - kind: Whitespace
                          text: " "
                        - kind: EqualityOperator
                          text: "="
                        - kind: Whitespace
                          text: " "
                        - kind: BinaryExpression
                          children:
                            - kind: IdentifierExpression
                              children:
                                - kind: Identifier
                                  text: result
                            - kind: Whitespace
                              text: " "
                            - kind: Ampersand
                              text: "&"
                            - kind: Whitespace
                              text: " "
                            - kind: CallExpression
                              children:
                                - kind: Identifier
                                  text: ChrB$
                                - kind: LeftParenthesis
                                  text: (
                                - kind: ArgumentList
                                  children:
                                    - kind: Argument
                                      children:
                                        - kind: IdentifierExpression
                                          children:
                                            - kind: Identifier
                                              text: i
                                - kind: RightParenthesis
                                  text: )
                        - kind: Newline
                          text: "\n"
                    - kind: Whitespace
                      text: "    "
                - kind: NextKeyword
                  text: Next
                - kind: Whitespace
                  text: " "
                - kind: Identifier
                  text: i
                - kind: Newline
                  text: "\n"
            - kind: Whitespace
              text: "    "
            - kind: AssignmentStatement
              children:
                - kind: IdentifierExpression
                  children:
                    - kind: Identifier
                      text: GenerateAlphabet
                - kind: Whitespace
                  text: " "
                - kind: EqualityOperator
                  text: "="
                - kind: Whitespace
                  text: " "
                - kind: IdentifierExpression
                  children:
                    - kind: Identifier
                      text: result
                - kind: Newline
                  text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: FunctionKeyword
          text: Function
        - kind: Newline
          text: "\n"
